fix overflowing text on display

--- a/css/style.css
+++ b/css/style.css
@@ -40,11 +40,9 @@ button{
     height: 50px;
     font-size: 32px;
     padding: 0 8px;
-
-    
+    overflow-x: auto;
     display: flex;
     flex-direction: row-reverse;
-    flex-wrap: wrap;
     align-items: center;
 }
 
@@ -61,8 +59,8 @@ button{
 
 #delete{
     width: 50px;
-    height: 25px;
-    font-size: 16px;
+    height: 16px;
+    font-size: 12px;
     border-radius: 15px;
     background-color: red;
 }
